Language files update and sync

--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-05-28 13:26+0200\n"
+"PO-Revision-Date: 2019-12-18 00:29+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
+"Language: cz_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: cz_CZ\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -26,19 +26,37 @@ msgid "Web registration on "
 msgstr "Webová registrace "
 
 msgctxt "#30101"
-msgid "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
-msgstr "PROSÍM NEKONTAKTUJTE SVÉHO OPERÁTORA OHLEDNĚ PODPORY TOHOTO DOPLŇKU, JDE O NEOFICIÁLNÍ DOPLNĚK A NEMÁ ŽÁDNOU OFICIÁLNÍ PODPORU! KOMUNITNÍ PODPORU TOHOTO DOPLŇKU LZE NAJÍT NA GITHUBU NEBO FÓRU KODI"
+msgid ""
+"PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
+"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
+"ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
+msgstr ""
+"PROSÍM NEKONTAKTUJTE SVÉHO OPERÁTORA OHLEDNĚ PODPORY TOHOTO DOPLŇKU, JDE O "
+"NEOFICIÁLNÍ DOPLNĚK A NEMÁ ŽÁDNOU OFICIÁLNÍ PODPORU! KOMUNITNÍ PODPORU "
+"TOHOTO DOPLŇKU LZE NAJÍT NA GITHUBU NEBO FÓRU KODI"
 
 msgctxt "#30102"
 msgid "Operators"
 msgstr "Operátoři"
 
 msgctxt "#30103"
-msgid "Sorry, you are not correctly logged in, aborting play. Try to login on the official site then try again, if the problem persist ask support with a full debug log"
-msgstr "Omlouváme se, nejste správně přihlášen, přehrávání přerušeno. Zkuste se přihlásit na oficiální stránky a zkuzte to znovu. Jestliže problém přetrvává požádejte o podporu s úplným ladícím výpisem"
+msgid ""
+"Sorry, you are not correctly logged in, aborting play. Try to login on the "
+"official site then try again, if the problem persist ask support with a full "
+"debug log"
+msgstr ""
+"Omlouváme se, nejste správně přihlášen, přehrávání přerušeno. Zkuste se "
+"přihlásit na oficiální stránky a zkuzte to znovu. Jestliže problém přetrvává "
+"požádejte o podporu s úplným ladícím výpisem"
 
+#, fuzzy
+#| msgctxt "#30104"
+#| msgid ""
+#| "Operaotr not selected. Please select your country/operaotr in the "
+#| "settings."
 msgctxt "#30104"
-msgid "Operaotr not selected. Please select your country/operaotr in the settings."
+msgid ""
+"Operator not selected. Please select your country/operator in the settings."
 msgstr "Operátor nevybrán. Vyberte prosím vaši zemi/operátora v nastavení."
 
 msgctxt "#30105"
@@ -69,17 +87,24 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Nastavení selhalo, zkuste to znovu"
 
+#, fuzzy
+#| msgctxt "#30445"
+#| msgid "Chose your operator"
 msgctxt "#30445"
-msgid "Chose your operator"
+msgid "Choose your operator"
 msgstr "Vyberte operátora"
 
 msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
+#, fuzzy
+#| msgctxt "#30665"
+#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
-msgstr "Nastavení adaptivního vstupního proudu (max. dat. tok, rozlišení, atd...)"
+msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
+msgstr ""
+"Nastavení adaptivního vstupního proudu (max. dat. tok, rozlišení, atd...)"
 
 msgctxt "#30666"
 msgid "InputStream Helper information"
@@ -146,15 +171,39 @@ msgid "Search..."
 msgstr "Hledat..."
 
 msgctxt "#30712"
-msgid "WARNING. You enabled the [Include sensitive login data in debug log] option in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in Kodi, your sensitive and private login information and session data will be written to the debug log. Please don't share publicly such a log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a log with that option enabled to debug a login/session related issue be very CAREFUL who you send that log too and do it privately and change your password as soon as possible. If you posted such a log publicly by accident, change your password as soon as possible. DO YOU WANT TO CONTINUE?"
-msgstr "VAROVÁNÍ. Povolili jste volbu [Zahrnout citlivé přihlašovací údaje v ladicím logu] v expertním nastavení tohoto doplňku. JESTLIŽE NEVÍTE PŘESNÉ CO JSTE POVOLILI, TAK TO ZAKAŽTE, NENÍ TO NEZBYTNE NUTNÉ!! Znamená to, že když jsou ladicí informace zapnuté v Kodi, tak jsou citlivé a přihlašovací údaje a data sezení zapisována do ladicích výpisů. Prosím nesdílejte veřejně takový log. JESTLIŽE POTŘEBUJETE ZVEŘEJNIT LADÍCÍ VYPIS VYPNĚTE TUTO VOLBU. Jestli opravdu potřebujte poslat ladicí výpis s toutu volbu zapnutou, buďte VELMI opatrní komu výpis posíláte a posílejte ho soukromě a změňte heslo co nejdříve. Jestliže jste omylem zveřejnili log, změňte heslo co nejdříve. CHCETE OPRAVDU POKRAČOVAT?"
+msgid ""
+"WARNING. You enabled the [Include sensitive login data in debug log] option "
+"in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED "
+"THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is "
+"enabled in Kodi, your sensitive and private login information and session "
+"data will be written to the debug log. Please don't share publicly such a "
+"log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
+"really have to send a log with that option enabled to debug a login/session "
+"related issue be very CAREFUL who you send that log too and do it privately "
+"and change your password as soon as possible. If you posted such a log "
+"publicly by accident, change your password as soon as possible. DO YOU WANT "
+"TO CONTINUE?"
+msgstr ""
+"VAROVÁNÍ. Povolili jste volbu [Zahrnout citlivé přihlašovací údaje v ladicím "
+"logu] v expertním nastavení tohoto doplňku. JESTLIŽE NEVÍTE PŘESNÉ CO JSTE "
+"POVOLILI, TAK TO ZAKAŽTE, NENÍ TO NEZBYTNE NUTNÉ!! Znamená to, že když jsou "
+"ladicí informace zapnuté v Kodi, tak jsou citlivé a přihlašovací údaje a "
+"data sezení zapisována do ladicích výpisů. Prosím nesdílejte veřejně takový "
+"log. JESTLIŽE POTŘEBUJETE ZVEŘEJNIT LADÍCÍ VYPIS VYPNĚTE TUTO VOLBU. Jestli "
+"opravdu potřebujte poslat ladicí výpis s toutu volbu zapnutou, buďte VELMI "
+"opatrní komu výpis posíláte a posílejte ho soukromě a změňte heslo co "
+"nejdříve. Jestliže jste omylem zveřejnili log, změňte heslo co nejdříve. "
+"CHCETE OPRAVDU POKRAČOVAT?"
 
 msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACE"
 
+#, fuzzy
+#| msgctxt "#30714"
+#| msgid "I understand the risk continue"
 msgctxt "#30714"
-msgid "I understand the risk continue"
+msgid "I understand the risks and continue"
 msgstr "Rozumím riziku pokračování"
 
 msgctxt "#30715"
@@ -283,19 +332,31 @@ msgstr "Ladit"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
-msgstr "Zahrnout citlivá přihlašovací data v ladícím výpisu [NESDÍLEJTE VEŘEJNĚ]"
+msgstr ""
+"Zahrnout citlivá přihlašovací data v ladícím výpisu [NESDÍLEJTE VEŘEJNĚ]"
 
 msgctxt "#30692"
-msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
-msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgid ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
+msgstr ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
 
+#, fuzzy
+#| msgctxt "#30693"
+#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
-msgid "Include full details/RAW retrived data in Debug log"
+msgid "Include full details/RAW retrieved data in Debug log"
 msgstr "Include full details/RAW retrived data in Debug log"
 
 msgctxt "#30694"
-msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
-msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgid ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
+msgstr ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
 
 msgctxt "#30696"
 msgid "Home Category"
@@ -303,4 +364,24 @@ msgstr ""
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
+msgstr ""
+
+msgctxt "#30800"
+msgid "Sync play time with Hbo Go"
+msgstr ""
+
+msgctxt "#30801"
+msgid "Send elapsed time to Hbo go"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Get elapsed time from Hbo go"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Set watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Set un-watched on Hbo Go"
 msgstr ""
