--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,50 +7,74 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: jhdgghost\n"
-"Language-Team: arvvoid\n"
+"PO-Revision-Date: 2019-12-18 00:30+0100\n"
+"Last-Translator: J.M. Pongilioni ('boblo' @ Kodi Forums) <djinn2k2@gmail."
+"com>\n"
+"Language-Team: Spanish\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es_es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgctxt "#30000"
 msgid "ENG"
-msgstr "es_hboespana"
+msgstr "ES"
 
 msgctxt "#30100"
 msgid "Web registration on "
-msgstr "Registro en el sitio Web "
+msgstr "Registro Web en "
 
 msgctxt "#30101"
-msgid "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
-msgstr "POR FAVOR, NO PONERSE EN CONTACTO CON EL SOPORTE DE TU OPERADOR SOBRE ESTE ADD-ON, ESTE ES UN ADD-ON NO OFICIAL ¡Y NO TIENE APOYO OFICIAL! LA AYUDA DE LA COMUNIDAD SE PUEDE ENCONTRAR EN LA PÁGINA DEL ADD-ON EN GITHUB O EN EL FORO DE KODI"
+msgid ""
+"PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
+"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
+"ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
+msgstr ""
+"POR FAVOR, NO CONTACTES CON LA ASISTENCIA DE TU OPERADOR POR ESTE "
+"COMPLEMENTO, ¡ESTE ES UN COMPLEMENTO NO OFICIAL Y NO TIENE ASISTENCIA "
+"OFICIAL! LA AYUDA DE LA COMUNIDAD SE PUEDE ENCONTRAR EN LA PÁGINA DE GITHUB "
+"DEL COMPLEMENTO O EN EL FORO DE KODI"
 
 msgctxt "#30102"
 msgid "Operators"
 msgstr "Operadores"
 
 msgctxt "#30103"
-msgid "Sorry, you are not correctly logged in, aborting play. Try to login on the official site then try again, if the problem persist ask support with a full debug log"
-msgstr "Lo sentimos, no has iniciado la sesión correctamente, cancelando la reproducción. Intente iniciar la sesión en la web oficial y después inténtelo de nuevo, si el problema persiste, solicite ayuda con el registro de depuración completo"
+msgid ""
+"Sorry, you are not correctly logged in, aborting play. Try to login on the "
+"official site then try again, if the problem persist ask support with a full "
+"debug log"
+msgstr ""
+"Lo sentimos, no has iniciado sesión correctamente, cancelando la "
+"reproducción. Intenta iniciar sesión en el sitio oficial y luego prueba de "
+"nuevo, si el problema persiste, solicita ayuda con un registro de depuración "
+"completo"
 
+#, fuzzy
+#| msgctxt "#30104"
+#| msgid ""
+#| "Operaotr not selected. Please select your country/operaotr in the "
+#| "settings."
 msgctxt "#30104"
-msgid "Operaotr not selected. Please select your country/operaotr in the settings."
-msgstr "Operador no seleccionado. Por favor selecciona tu pais/operador en las opciones."
+msgid ""
+"Operator not selected. Please select your country/operator in the settings."
+msgstr ""
+"Operador no seleccionado. Por favor, selecciona tu país/operador en los "
+"ajustes."
 
 msgctxt "#30105"
 msgid "Logout (Reset setup)"
-msgstr "Cierre de sesión (Reinicia la configuración)"
+msgstr "Cerrar sesión (restablece la configuración)"
 
 msgctxt "#30106"
 msgid "Destroy current session"
-msgstr "Acabar la sesión actual"
+msgstr "Destruir la sesión actual"
 
 msgctxt "#30440"
 msgid "Settings"
-msgstr "Opciones"
+msgstr "Ajustes"
 
 msgctxt "#30441"
 msgid "Chose your Country"
@@ -58,47 +82,53 @@ msgstr "Elige tu país"
 
 msgctxt "#30442"
 msgid "Enter e-mail/username"
-msgstr "Introducir e-mail/nombre de usuario"
+msgstr "Introduce el e-mail / nombre de usuario"
 
 msgctxt "#30443"
 msgid "Enter password"
-msgstr "Introducir password"
+msgstr "Introduce la contraseña"
 
 msgctxt "#30444"
 msgid "Setup failed, please try again"
-msgstr "Configuración fallida, por favor intentelo de nuevo"
+msgstr "Error en la configuración, por favor, inténtalo de nuevo"
 
+#, fuzzy
+#| msgctxt "#30445"
+#| msgid "Chose your operator"
 msgctxt "#30445"
-msgid "Chose your operator"
-msgstr "Escoje tu operador"
+msgid "Choose your operator"
+msgstr "Elige tu operador"
 
 msgctxt "#30660"
 msgid "DRM"
-msgstr "DRM"
+msgstr ""
 
+#, fuzzy
+#| msgctxt "#30665"
+#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
-msgstr "Opciones de Inputstream Adaptive (max bitrate,resolución,etc..)"
+msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
+msgstr "Ajustes de InputStream Adaptive (tasa de bits máx., resolución, etc.)"
 
 msgctxt "#30666"
 msgid "InputStream Helper information"
-msgstr "InputStream Helper information"
+msgstr "Información de InputStream Helper"
 
 msgctxt "#30667"
 msgid "(Re)install Widevine CDM..."
-msgstr "(Re)install Widevine CDM..."
+msgstr "(Re)instalar Widevine CDM..."
 
 msgctxt "#30668"
 msgid "Remove Widevine CDM..."
-msgstr "Remove Widevine CDM..."
+msgstr "Eliminar Widevine CDM..."
 
 msgctxt "#30669"
 msgid "InputStream Helper settings..."
-msgstr "InputStream Helper settings..."
+msgstr "Ajustes de InputStream Helper..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
-msgstr "Encontrar películas y Series de TV"
+msgstr "Encontrar películas y series de TV..."
 
 msgctxt "#30701"
 msgid "No result"
@@ -106,7 +136,7 @@ msgstr "Sin resultados"
 
 msgctxt "#30702"
 msgid "Error"
-msgstr "Error"
+msgstr ""
 
 msgctxt "#30703"
 msgid "Episode can be watched until:"
@@ -130,39 +160,67 @@ msgstr "Mi lista"
 
 msgctxt "#30708"
 msgid "Please enter your login details in the settings!"
-msgstr "Por favor, introduce tus datos de inicio de sesión en la configuración!"
+msgstr "¡Por favor, introduce tus datos de inicio de sesión en los ajustes!"
 
 msgctxt "#30709"
 msgid "Login error, check your login details!"
-msgstr "Error de inicio de sesión, compruebA Tus datos de inicio de sesión!"
+msgstr "¡Error al iniciar sesión, comprueba tus datos de inicio de sesión!"
 
 msgctxt "#30710"
 msgid "No operator defined! Check your settings!"
-msgstr "Ningún operador definido! Revisa tu configuración!"
+msgstr "¡No hay operador establecido! ¡Comprueba tus ajustes!"
 
 msgctxt "#30711"
 msgid "Search..."
 msgstr "Buscar..."
 
 msgctxt "#30712"
-msgid "WARNING. You enabled the [Include sensitive login data in debug log] option in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in Kodi, your sensitive and private login information and session data will be written to the debug log. Please don't share publicly such a log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a log with that option enabled to debug a login/session related issue be very CAREFUL who you send that log too and do it privately and change your password as soon as possible. If you posted such a log publicly by accident, change your password as soon as possible. DO YOU WANT TO CONTINUE?"
-msgstr "¡ADVERTENCIA. Has habilitado la opción [Incluir datos de inicio de sesión confidenciales en el registro de depuración] en la configuración experta de este ADD-ON. SI NO SABES EXACTAMENTE POR QUÉ LO HAS HABILITADO ENTONCES DESAHABILITALO, NO SE NECESITA! Esto significa que si el registro de depuración está habilitado en Kodi, tu información de inicio de sesión confidencial y privada y los datos de la sesión se escribirán en el registro de depuración. Por favor, no compartas públicamente ese registro. SI NECESITA PUBLICAR UN REGISTRO DE DEPURACIÓN, DESHABILITE ESTA OPCIÓN. Si realmente tiene que enviar un registro con esa opción habilitada para depurar un problema relacionado con el inicio de sesión / sesión, tenga mucho cuidado con el envío de ese registro y hágalo de forma privada y cambie su contraseña lo antes posible. Si publicó tal registro públicamente por accidente, cambie su contraseña lo antes posible. ¿QUIERES CONTINUAR?"
+msgid ""
+"WARNING. You enabled the [Include sensitive login data in debug log] option "
+"in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED "
+"THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is "
+"enabled in Kodi, your sensitive and private login information and session "
+"data will be written to the debug log. Please don't share publicly such a "
+"log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
+"really have to send a log with that option enabled to debug a login/session "
+"related issue be very CAREFUL who you send that log too and do it privately "
+"and change your password as soon as possible. If you posted such a log "
+"publicly by accident, change your password as soon as possible. DO YOU WANT "
+"TO CONTINUE?"
+msgstr ""
+"AVISO. Has habilitado la opción [Incluir datos de inicio de sesión "
+"confidenciales en el registro de depuración] en la configuración experta de "
+"este complemento. SI NO SABES POR QUÉ HABILITASTE ESO, DESHABILÍTALO, ¡NO SE "
+"NECESITA!! Esto significa que si el registro de depuración está habilitado "
+"en Kodi, tu información de inicio de sesión privada y confidencial y los "
+"datos de la sesión se escribirán al registro de depuración. Por favor, no "
+"compartas públicamente ese registro. SI NECESITAS ENVIAR UN REGISTRO DE "
+"DEPURACIÓN PÚBLICAMENTE, DESHABILITA ESA OPCIÓN. Si realmente tienes que "
+"enviar un registro con esa opción habilitada para depurar un problema "
+"relacionado con una conexión/sesión, ten mucho CUIDADO con a quien envías "
+"ese registro también, hazlo de forma privada y cambia tu contraseña tan "
+"pronto como sea posible. Si enviaste públicamente ese registro por "
+"accidente, cambia tu contraseña tan pronto como sea posible. ¿DESEAS "
+"CONTINUAR?"
 
 msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACIÓN"
 
+#, fuzzy
+#| msgctxt "#30714"
+#| msgid "I understand the risk continue"
 msgctxt "#30714"
-msgid "I understand the risk continue"
-msgstr "Entiendo los riesgos continuar"
+msgid "I understand the risks and continue"
+msgstr "Entiendo los riesgos y continuar"
 
 msgctxt "#30715"
 msgid "Stop, let me change the settings"
-msgstr "Detente, déjame cambiar la configuración"
+msgstr "Para, déjame cambiar los ajustes"
 
 msgctxt "#30716"
 msgid "TV Shows"
-msgstr "Series de TV"
+msgstr "Series"
 
 msgctxt "#30717"
 msgid "Movies"
@@ -170,47 +228,47 @@ msgstr "Películas"
 
 msgctxt "#30718"
 msgid "Trending Now"
-msgstr "Tendencias actuales"
+msgstr "Tendencias ahora"
 
 msgctxt "#30719"
 msgid "Add to My List"
-msgstr "Añadir a mi lista"
+msgstr "Añadir a Mi lista"
 
 msgctxt "#30720"
 msgid "Remove from My List"
-msgstr "Eliminar de mi lista"
+msgstr "Quitar de Mi lista"
 
 msgctxt "#30721"
 msgid "Rate 5"
-msgstr "Valoración 5"
+msgstr "Valorar con 5"
 
 msgctxt "#30722"
 msgid "Rate 4"
-msgstr "Valoración 4"
+msgstr "Valorar con 4"
 
 msgctxt "#30723"
 msgid "Rate 3"
-msgstr "Valoración 3"
+msgstr "Valorar con 3"
 
 msgctxt "#30724"
 msgid "Rate 2"
-msgstr "Valoración 2"
+msgstr "Valorar con 2"
 
 msgctxt "#30725"
 msgid "Rate 1"
-msgstr "Valoración 1"
+msgstr "Valorar con 1"
 
 msgctxt "#30726"
 msgid "Rate"
-msgstr "Valoración"
+msgstr "Valorar"
 
 msgctxt "#30727"
 msgid "Success"
-msgstr "Éxito"
+msgstr "Completado"
 
 msgctxt "#30728"
 msgid "Login failed, do you want to input your credentials again?"
-msgstr "Falló el inicio de sesión, ¿quieres volver a introducir tus credenciales?"
+msgstr "Error al iniciar sesión, ¿deseas volver a introducir tus credenciales?"
 
 msgctxt "#30729"
 msgid "KIDS"
@@ -218,19 +276,19 @@ msgstr "INFANTIL"
 
 msgctxt "#30730"
 msgid "Weekly Top"
-msgstr "Top Semanal"
+msgstr "Favoritos de la semana"
 
 msgctxt "#30731"
 msgid "History"
-msgstr ""
+msgstr "Historial"
 
 msgctxt "#30732"
 msgid "Continue Watching"
-msgstr ""
+msgstr "Continuar viendo"
 
 msgctxt "#30733"
 msgid "Home Lists"
-msgstr ""
+msgstr "Listas iniciales"
 
 msgctxt "#30650"
 msgid "Language"
@@ -238,8 +296,7 @@ msgstr "Idioma"
 
 msgctxt "#30651"
 msgid "Always use default operator language"
-msgstr "Usar siempre el idioma prediterminado del operador"
-
+msgstr "Usar siempre el idioma predeterminado del operador"
 
 msgctxt "#30655"
 msgid "Subtitles"
@@ -251,7 +308,11 @@ msgstr "Activar automáticamente los subtítulos predeterminados"
 
 msgctxt "#30652"
 msgid "Always use original titles"
-msgstr "Usa siempre los títulos originales"
+msgstr "Usar siempre los títulos originales"
+
+msgctxt "#30653"
+msgid "Inject subtitles"
+msgstr "Introducir subtítulos"
 
 msgctxt "#30670"
 msgid "Expert"
@@ -259,7 +320,7 @@ msgstr "Experto"
 
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
-msgstr "Forzar raspado de títulos conocidos"
+msgstr "Forzar títulos amigables a los extractores (scrapers)"
 
 msgctxt "#30680"
 msgid "Session"
@@ -271,7 +332,7 @@ msgstr "Sesión válida por horas"
 
 msgctxt "#30682"
 msgid "Reset session, force re-login"
-msgstr "Reiniciar sesión, forzar reinicio de sesión"
+msgstr "Restablecer sesión, forzar reinicio de sesión"
 
 msgctxt "#30690"
 msgid "Debug"
@@ -279,24 +340,60 @@ msgstr "Depuración"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
-msgstr "Incluir datos confidenciales de inicio de sesión en el registro de depuración [NO ENVIAR PÚBLICAMENTE]"
+msgstr ""
+"Incluir datos de inicio de sesión confidenciales en registro de depuración "
+"[NO ENVIAR PÚBLICAMENTE]"
 
 msgctxt "#30692"
-msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
-msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgid ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
+msgstr ""
+"¿Estás seguro de que deseas restablecer completamente tu configuración (se "
+"perderá el registro del dispositivo)?"
 
+#, fuzzy
+#| msgctxt "#30693"
+#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
-msgid "Include full details/RAW retrived data in Debug log"
-msgstr "Include full details/RAW retrived data in Debug log"
+msgid "Include full details/RAW retrieved data in Debug log"
+msgstr ""
+"Incluir todos los detalles / datos recuperados en bruto en registro de "
+"depuración"
 
 msgctxt "#30694"
-msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
-msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgid ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
+msgstr ""
+"La dependencia Cryptodome no está presente en tu sistema, el complemento HBO "
+"Go no puede ejecutarse. Para obtener ayuda, consulta el hilo con las "
+"instrucciones de instalación / asistencia oficial"
 
 msgctxt "#30696"
 msgid "Home Category"
-msgstr ""
+msgstr "Categoría inicial"
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
+msgstr "Agrupar listas iniciales en una categoría especial"
+
+msgctxt "#30800"
+msgid "Sync play time with Hbo Go"
+msgstr ""
+
+msgctxt "#30801"
+msgid "Send elapsed time to Hbo go"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Get elapsed time from Hbo go"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Set watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Set un-watched on Hbo Go"
 msgstr ""
