--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-03-05 14:57+0100\n"
+"PO-Revision-Date: 2019-12-18 00:33+0100\n"
+"Last-Translator: \n"
 "Language-Team: arvvoid, kowalmisiek\n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 "
 "|| n%100>14) ? 1 : 2);\n"
-"X-Generator: Poedit 2.2.1\n"
-"Last-Translator: \n"
-"Language: pl_PL\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -52,9 +52,14 @@ msgstr ""
 "problem nadal występuje, poproś o wsparcie przy użyciu pełnego dziennika "
 "debugowania"
 
+#, fuzzy
+#| msgctxt "#30104"
+#| msgid ""
+#| "Operaotr not selected. Please select your country/operaotr in the "
+#| "settings."
 msgctxt "#30104"
 msgid ""
-"Operaotr not selected. Please select your country/operaotr in the settings."
+"Operator not selected. Please select your country/operator in the settings."
 msgstr ""
 "Operator nie został wybrany. Wybierz swój kraj/operatora w ustawieniach."
 
@@ -86,16 +91,22 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Konfiguracja nie powiodła się. Spróbuj ponownie"
 
+#, fuzzy
+#| msgctxt "#30445"
+#| msgid "Chose your operator"
 msgctxt "#30445"
-msgid "Chose your operator"
+msgid "Choose your operator"
 msgstr "Wybierz swojego operatora"
 
 msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
+#, fuzzy
+#| msgctxt "#30665"
+#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
+msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr ""
 "Wejściowe ustawienia adaptacyjne (maksymalna szybkość transmisji, "
 "rozdzielczość, ECC ..)"
@@ -194,8 +205,11 @@ msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMACJE"
 
+#, fuzzy
+#| msgctxt "#30714"
+#| msgid "I understand the risk continue"
 msgctxt "#30714"
-msgid "I understand the risk continue"
+msgid "I understand the risks and continue"
 msgstr "Rozumiem ryzyko i kontunuuje"
 
 msgctxt "#30715"
@@ -246,9 +260,38 @@ msgctxt "#30726"
 msgid "Rate"
 msgstr "Ocena"
 
-msgctxt "#33727"
+#, fuzzy
+#| msgctxt "#33727"
+#| msgid "Success"
+msgctxt "#30727"
 msgid "Success"
 msgstr "Sukces"
+
+msgctxt "#30728"
+msgid "Login failed, do you want to input your credentials again?"
+msgstr ""
+"Logowanie nie powiodło się, czy chcesz ponownie wprowadzić swoje dane "
+"uwierzytelniające?"
+
+msgctxt "#30729"
+msgid "KIDS"
+msgstr "DZIECI"
+
+msgctxt "#30730"
+msgid "Weekly Top"
+msgstr "Tygodniowy top"
+
+msgctxt "#30731"
+msgid "History"
+msgstr ""
+
+msgctxt "#30732"
+msgid "Continue Watching"
+msgstr ""
+
+msgctxt "#30733"
+msgid "Home Lists"
+msgstr ""
 
 msgctxt "#30650"
 msgid "Language"
@@ -269,6 +312,13 @@ msgstr "Automatycznie włącz domyślne napisy"
 msgctxt "#30652"
 msgid "Always use original titles"
 msgstr "Zawsze używaj oryginalnych tytułów"
+
+#, fuzzy
+#| msgctxt "#30655"
+#| msgid "Subtitles"
+msgctxt "#30653"
+msgid "Inject subtitles"
+msgstr "Napisy"
 
 msgctxt "#30670"
 msgid "Expert"
@@ -300,41 +350,28 @@ msgstr ""
 "Uwzględnij poufne dane logowania w dzienniku debugowania [NIE PODAWAJ "
 "PUBLICZNIE]"
 
-msgctxt "#30728"
-msgid "Login failed, do you want to input your credentials again?"
-msgstr "Logowanie nie powiodło się, czy chcesz ponownie wprowadzić swoje dane uwierzytelniające?"
-
-msgctxt "#30729"
-msgid "KIDS"
-msgstr "DZIECI"
-
-msgctxt "#30730"
-msgid "Weekly Top"
-msgstr "Tygodniowy top"
-
-msgctxt "#30731"
-msgid "History"
-msgstr ""
-
-msgctxt "#30732"
-msgid "Continue Watching"
-msgstr ""
-
-msgctxt "#30733"
-msgid "Home Lists"
-msgstr ""
-
 msgctxt "#30692"
-msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
-msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgid ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
+msgstr ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
 
+#, fuzzy
+#| msgctxt "#30693"
+#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
-msgid "Include full details/RAW retrived data in Debug log"
+msgid "Include full details/RAW retrieved data in Debug log"
 msgstr "Include full details/RAW retrived data in Debug log"
 
 msgctxt "#30694"
-msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
-msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgid ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
+msgstr ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
 
 msgctxt "#30696"
 msgid "Home Category"
@@ -342,4 +379,24 @@ msgstr ""
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
+msgstr ""
+
+msgctxt "#30800"
+msgid "Sync play time with Hbo Go"
+msgstr ""
+
+msgctxt "#30801"
+msgid "Send elapsed time to Hbo go"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Get elapsed time from Hbo go"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Set watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Set un-watched on Hbo Go"
 msgstr ""
