--- a/resources/language/resource.language.se_se/strings.po
+++ b/resources/language/resource.language.se_se/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-04-28 00:28+0200\n"
+"PO-Revision-Date: 2019-12-18 00:34+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
+"Language: se_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: se_se\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -26,20 +26,40 @@ msgid "Web registration on "
 msgstr "Webb-registering på"
 
 msgctxt "#30101"
-msgid "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
-msgstr "VÄNLIGEN KONTAKTA INTE DIN LEVERANTÖR ANGÅENDE DETTA ADD-ON, DETTA ÄR INTE ETT OFFICIELLT ADD-ON OCH DÄRFÖR FINNS INGEN OFFICIELL SUPPORT! FÖR HJÄLP OCH SUPPORT HÄNVISAS TILL DESS GITHUBSIDA ELLER KODI FORUM"
+msgid ""
+"PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
+"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
+"ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
+msgstr ""
+"VÄNLIGEN KONTAKTA INTE DIN LEVERANTÖR ANGÅENDE DETTA ADD-ON, DETTA ÄR INTE "
+"ETT OFFICIELLT ADD-ON OCH DÄRFÖR FINNS INGEN OFFICIELL SUPPORT! FÖR HJÄLP "
+"OCH SUPPORT HÄNVISAS TILL DESS GITHUBSIDA ELLER KODI FORUM"
 
 msgctxt "#30102"
 msgid "Operators"
 msgstr "Leverantörer"
 
 msgctxt "#30103"
-msgid "Sorry, you are not correctly logged in, aborting play. Try to login on the official site then try again, if the problem persist ask support with a full debug log"
-msgstr "Dessvärre verkar du inte vara korrekt inloggad, uppspelningen avbryts. Försök logga in via en officiell sida och försök igen, om problemet kvarstår posta en full debug-log med en beskrivning av problemet."
+msgid ""
+"Sorry, you are not correctly logged in, aborting play. Try to login on the "
+"official site then try again, if the problem persist ask support with a full "
+"debug log"
+msgstr ""
+"Dessvärre verkar du inte vara korrekt inloggad, uppspelningen avbryts. "
+"Försök logga in via en officiell sida och försök igen, om problemet kvarstår "
+"posta en full debug-log med en beskrivning av problemet."
 
+#, fuzzy
+#| msgctxt "#30104"
+#| msgid ""
+#| "Operaotr not selected. Please select your country/operaotr in the "
+#| "settings."
 msgctxt "#30104"
-msgid "Operaotr not selected. Please select your country/operaotr in the settings."
-msgstr "Leverantör har inte valts. Vänligen välj ditt land/leverantör i inställningar "
+msgid ""
+"Operator not selected. Please select your country/operator in the settings."
+msgstr ""
+"Leverantör har inte valts. Vänligen välj ditt land/leverantör i "
+"inställningar "
 
 msgctxt "#30105"
 msgid "Logout (Reset setup)"
@@ -69,16 +89,22 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Konfigurationen misslyckades, försök igen"
 
+#, fuzzy
+#| msgctxt "#30445"
+#| msgid "Chose your operator"
 msgctxt "#30445"
-msgid "Chose your operator"
+msgid "Choose your operator"
 msgstr "Välj leverantör"
 
 msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
+#, fuzzy
+#| msgctxt "#30665"
+#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
+msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr "Inställningar för Inputsream Adaptive (högsta bitrate, upplösning, mm)"
 
 msgctxt "#30666"
@@ -146,15 +172,40 @@ msgid "Search..."
 msgstr "Söker..."
 
 msgctxt "#30712"
-msgid "WARNING. You enabled the [Include sensitive login data in debug log] option in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in Kodi, your sensitive and private login information and session data will be written to the debug log. Please don't share publicly such a log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a log with that option enabled to debug a login/session related issue be very CAREFUL who you send that log too and do it privately and change your password as soon as possible. If you posted such a log publicly by accident, change your password as soon as possible. DO YOU WANT TO CONTINUE?"
-msgstr "VARNING. Du har aktiverat funktionen [Inkludera känsliga inloggningsdata i felsökningsloggen] i inställningarnas expertläge. OM DU INTE GJORT DETTA MED AVSIKT OCH VET VAD DET INNEBÄR, SLÅ AV FUNKTIONEN!!\" Detta innebär att om KODIs felsökningsläge är aktiverat, så kommer dina inloggningsuppgifter och sessionsdata finnas synliga i felsökningsloggen. Offentliggör inte en sådan loggfil. OM DU BEHÖVER POSTA EN FELSÖKNINGSFIL, AVAKTIVERA DENNA FUNKTION. Om du absolut behöver posta en felsökningsfil med denna funktion aktiverad för att felsöka ett inloggningsrelaterat problem var försiktig med till vem du skickar filen och gör det inte publikt samt ändra ditt lösenord så fort som möjligt. Om du råkat posta en sådan felsökningsfil öppet, ändra ditt lösenord snarast. VILL DU FORTSÄTTA"
+msgid ""
+"WARNING. You enabled the [Include sensitive login data in debug log] option "
+"in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED "
+"THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is "
+"enabled in Kodi, your sensitive and private login information and session "
+"data will be written to the debug log. Please don't share publicly such a "
+"log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
+"really have to send a log with that option enabled to debug a login/session "
+"related issue be very CAREFUL who you send that log too and do it privately "
+"and change your password as soon as possible. If you posted such a log "
+"publicly by accident, change your password as soon as possible. DO YOU WANT "
+"TO CONTINUE?"
+msgstr ""
+"VARNING. Du har aktiverat funktionen [Inkludera känsliga inloggningsdata i "
+"felsökningsloggen] i inställningarnas expertläge. OM DU INTE GJORT DETTA MED "
+"AVSIKT OCH VET VAD DET INNEBÄR, SLÅ AV FUNKTIONEN!!\" Detta innebär att om "
+"KODIs felsökningsläge är aktiverat, så kommer dina inloggningsuppgifter och "
+"sessionsdata finnas synliga i felsökningsloggen. Offentliggör inte en sådan "
+"loggfil. OM DU BEHÖVER POSTA EN FELSÖKNINGSFIL, AVAKTIVERA DENNA FUNKTION. "
+"Om du absolut behöver posta en felsökningsfil med denna funktion aktiverad "
+"för att felsöka ett inloggningsrelaterat problem var försiktig med till vem "
+"du skickar filen och gör det inte publikt samt ändra ditt lösenord så fort "
+"som möjligt. Om du råkat posta en sådan felsökningsfil öppet, ändra ditt "
+"lösenord snarast. VILL DU FORTSÄTTA"
 
 msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMATION"
 
+#, fuzzy
+#| msgctxt "#30714"
+#| msgid "I understand the risk continue"
 msgctxt "#30714"
-msgid "I understand the risk continue"
+msgid "I understand the risks and continue"
 msgstr "Jag förstår riskerna och vill fortsätta"
 
 msgctxt "#30715"
@@ -253,6 +304,13 @@ msgctxt "#30652"
 msgid "Always use original titles"
 msgstr "Använd alltid originaltitlar"
 
+#, fuzzy
+#| msgctxt "#30655"
+#| msgid "Subtitles"
+msgctxt "#30653"
+msgid "Inject subtitles"
+msgstr "Undertexter"
+
 msgctxt "#30670"
 msgid "Expert"
 msgstr "Expert"
@@ -279,19 +337,32 @@ msgstr "Felsökning"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
-msgstr "Inkludera känslig login-data i felsökningsloggen [POSTA INTE DETTA OFFENTLIGT]"
+msgstr ""
+"Inkludera känslig login-data i felsökningsloggen [POSTA INTE DETTA "
+"OFFENTLIGT]"
 
 msgctxt "#30692"
-msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
-msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgid ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
+msgstr ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
 
+#, fuzzy
+#| msgctxt "#30693"
+#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
-msgid "Include full details/RAW retrived data in Debug log"
+msgid "Include full details/RAW retrieved data in Debug log"
 msgstr "Include full details/RAW retrived data in Debug log"
 
 msgctxt "#30694"
-msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
-msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgid ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
+msgstr ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
 
 msgctxt "#30696"
 msgid "Home Category"
@@ -299,4 +370,24 @@ msgstr ""
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
+msgstr ""
+
+msgctxt "#30800"
+msgid "Sync play time with Hbo Go"
+msgstr ""
+
+msgctxt "#30801"
+msgid "Send elapsed time to Hbo go"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Get elapsed time from Hbo go"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Set watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Set un-watched on Hbo Go"
 msgstr ""
