--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-04-28 00:27+0200\n"
+"PO-Revision-Date: 2019-12-18 00:31+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
+"Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi_fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -26,20 +26,39 @@ msgid "Web registration on "
 msgstr "Rekisteröinti sivustolla "
 
 msgctxt "#30101"
-msgid "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
-msgstr "ÄLÄ OLE YHTEYDESSÄ PALVELUNTARJOAJAN TUOTETUKEEN TÄHÄN LISÄOSAAN LIITTYEN, KOSKA TÄLLÄ EPÄVIRALLISELLA LISÄOSALLA EI OLE VIRALLISTA TUKEA! VOIT SAADA TUKEA YHTEISÖLTÄ TÄMÄN LISÄOSAN GITHUB-SIVULTA TAI KODI:N FOORUMILTA"
+msgid ""
+"PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
+"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
+"ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
+msgstr ""
+"ÄLÄ OLE YHTEYDESSÄ PALVELUNTARJOAJAN TUOTETUKEEN TÄHÄN LISÄOSAAN LIITTYEN, "
+"KOSKA TÄLLÄ EPÄVIRALLISELLA LISÄOSALLA EI OLE VIRALLISTA TUKEA! VOIT SAADA "
+"TUKEA YHTEISÖLTÄ TÄMÄN LISÄOSAN GITHUB-SIVULTA TAI KODI:N FOORUMILTA"
 
 msgctxt "#30102"
 msgid "Operators"
 msgstr "Palveluntarjoajat"
 
 msgctxt "#30103"
-msgid "Sorry, you are not correctly logged in, aborting play. Try to login on the official site then try again, if the problem persist ask support with a full debug log"
-msgstr "Toisto keskeytetään, koska et ole kirjautuneena. Koita kirjautua ensin virallisella sivustolla ja yritä sen jälkeen uudestaan. Jos virhe toistuu, kerää täysi debug-logi ja pyydä tukea."
+msgid ""
+"Sorry, you are not correctly logged in, aborting play. Try to login on the "
+"official site then try again, if the problem persist ask support with a full "
+"debug log"
+msgstr ""
+"Toisto keskeytetään, koska et ole kirjautuneena. Koita kirjautua ensin "
+"virallisella sivustolla ja yritä sen jälkeen uudestaan. Jos virhe toistuu, "
+"kerää täysi debug-logi ja pyydä tukea."
 
+#, fuzzy
+#| msgctxt "#30104"
+#| msgid ""
+#| "Operaotr not selected. Please select your country/operaotr in the "
+#| "settings."
 msgctxt "#30104"
-msgid "Operaotr not selected. Please select your country/operaotr in the settings."
-msgstr "Palveluntarjoajaa ei ole valittu. Valitse maa/paveluntarjoaja asetuksista."
+msgid ""
+"Operator not selected. Please select your country/operator in the settings."
+msgstr ""
+"Palveluntarjoajaa ei ole valittu. Valitse maa/paveluntarjoaja asetuksista."
 
 msgctxt "#30105"
 msgid "Logout (Reset setup)"
@@ -69,33 +88,39 @@ msgctxt "#30444"
 msgid "Setup failed, please try again"
 msgstr "Asennus epäonnistui, yritä uudestaan"
 
+#, fuzzy
+#| msgctxt "#30445"
+#| msgid "Chose your operator"
 msgctxt "#30445"
-msgid "Chose your operator"
+msgid "Choose your operator"
 msgstr "Valitse palveluntarjoaja"
 
 msgctxt "#30660"
 msgid "DRM"
 msgstr "DRM"
 
+#, fuzzy
+#| msgctxt "#30665"
+#| msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgctxt "#30665"
-msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
+msgid "Inputstream Adaptive Settings (max bitrate,resolution,etc..)"
 msgstr "Latauksen Adaptiiviset Asetukset (resoluutio, yms.)"
 
 msgctxt "#30666"
 msgid "InputStream Helper information"
-msgstr "InputStream Helper information"
+msgstr "InputStream Helper -tiedot"
 
 msgctxt "#30667"
 msgid "(Re)install Widevine CDM..."
-msgstr "(Re)install Widevine CDM..."
+msgstr "(Uudelleen)asenna Widevine CDM..."
 
 msgctxt "#30668"
 msgid "Remove Widevine CDM..."
-msgstr "Remove Widevine CDM..."
+msgstr "Poista Widevine CDM..."
 
 msgctxt "#30669"
 msgid "InputStream Helper settings..."
-msgstr "InputStream Helper settings..."
+msgstr "InputStream Helper -asetukset..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
@@ -146,15 +171,41 @@ msgid "Search..."
 msgstr "Etsi..."
 
 msgctxt "#30712"
-msgid "WARNING. You enabled the [Include sensitive login data in debug log] option in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in Kodi, your sensitive and private login information and session data will be written to the debug log. Please don't share publicly such a log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a log with that option enabled to debug a login/session related issue be very CAREFUL who you send that log too and do it privately and change your password as soon as possible. If you posted such a log publicly by accident, change your password as soon as possible. DO YOU WANT TO CONTINUE?"
-msgstr "VAROITUS. Olet laittanut [Sisällytä henkilökohtaisia käyttäjätunnuksia debug-logiin] -asetuksen päälle tämän lisäosan asiantuntija-asetuksista. JOS ET TARKALLEEN TIEDÄ MIKSI OLET LAITTANUT SEN PÄLLE, OTA SE POIS PÄÄLTÄ. SITÄ EI TARVITA!!! Se tarkoittaa, että jos debug-loggaus on asetettu päälle Kodi:n asetuksista, niin henkilökohtaiset käyttäjätunnuksesi ja istuntotietosi kirjoitetaan debug-logiin. Älä julkaise sellaista logia julkisesti. OTA ASETUS POIS PÄÄLTÄ, JOS SINUN TÄYTYY JULKAISTA DEGUB-LOGISI JULKISESTI. Jos sinun täytyy lähettää logit asetuksen ollessa päällä selvittääksesi kirjautumiseen/istuntoon liittyviä ongelmia, ole erittäin VAROVAINEN kenelle lähetät login ja tee se yksityisesti, sekä vaihda salasanasi niin pian kuin mahdollista. Jos julkaisit käyttäjätunnuksia sisältävän login vahingossa, vaihda salasanasi välittömästi. HALUATKO JATKAA?"
+msgid ""
+"WARNING. You enabled the [Include sensitive login data in debug log] option "
+"in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED "
+"THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is "
+"enabled in Kodi, your sensitive and private login information and session "
+"data will be written to the debug log. Please don't share publicly such a "
+"log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
+"really have to send a log with that option enabled to debug a login/session "
+"related issue be very CAREFUL who you send that log too and do it privately "
+"and change your password as soon as possible. If you posted such a log "
+"publicly by accident, change your password as soon as possible. DO YOU WANT "
+"TO CONTINUE?"
+msgstr ""
+"VAROITUS. Olet laittanut [Sisällytä henkilökohtaisia käyttäjätunnuksia debug-"
+"logiin] -asetuksen päälle tämän lisäosan asiantuntija-asetuksista. JOS ET "
+"TARKALLEEN TIEDÄ MIKSI OLET LAITTANUT SEN PÄLLE, OTA SE POIS PÄÄLTÄ. SITÄ EI "
+"TARVITA!!! Se tarkoittaa, että jos debug-loggaus on asetettu päälle Kodi:n "
+"asetuksista, niin henkilökohtaiset käyttäjätunnuksesi ja istuntotietosi "
+"kirjoitetaan debug-logiin. Älä julkaise sellaista logia julkisesti. OTA "
+"ASETUS POIS PÄÄLTÄ, JOS SINUN TÄYTYY JULKAISTA DEGUB-LOGISI JULKISESTI. Jos "
+"sinun täytyy lähettää logit asetuksen ollessa päällä selvittääksesi "
+"kirjautumiseen/istuntoon liittyviä ongelmia, ole erittäin VAROVAINEN kenelle "
+"lähetät login ja tee se yksityisesti, sekä vaihda salasanasi niin pian kuin "
+"mahdollista. Jos julkaisit käyttäjätunnuksia sisältävän login vahingossa, "
+"vaihda salasanasi välittömästi. HALUATKO JATKAA?"
 
 msgctxt "#30713"
 msgid "INFORMATION"
 msgstr "INFORMAATIO"
 
+#, fuzzy
+#| msgctxt "#30714"
+#| msgid "I understand the risk continue"
 msgctxt "#30714"
-msgid "I understand the risk continue"
+msgid "I understand the risks and continue"
 msgstr "Ymmärrän riskit ja haluan jatkaa"
 
 msgctxt "#30715"
@@ -223,15 +274,15 @@ msgstr "Viikon Parhaat"
 
 msgctxt "#30731"
 msgid "History"
-msgstr ""
+msgstr "Historia"
 
 msgctxt "#30732"
 msgid "Continue Watching"
-msgstr ""
+msgstr "Jatka Katsomista"
 
 msgctxt "#30733"
 msgid "Home Lists"
-msgstr ""
+msgstr "Kotilistat"
 
 msgctxt "#30650"
 msgid "Language"
@@ -252,6 +303,10 @@ msgstr "Käytä aina oletustekstityksiä"
 msgctxt "#30652"
 msgid "Always use original titles"
 msgstr "Käytä aina alkuperäisiä nimiä"
+
+msgctxt "#30653"
+msgid "Inject subtitles"
+msgstr "Käytä tekstityksiä"
 
 msgctxt "#30670"
 msgid "Expert"
@@ -279,24 +334,58 @@ msgstr "Debug"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
-msgstr "Sisällytä henkilökohtaisia käyttäjätunnuksia debug-logiin [ÄLÄ JULKAISE LOGIA JULKISESTI]"
+msgstr ""
+"Sisällytä henkilökohtaisia käyttäjätunnuksia debug-logiin [ÄLÄ JULKAISE "
+"LOGIA JULKISESTI]"
 
 msgctxt "#30692"
-msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
-msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgid ""
+"Are you sure you want to completely reset your setup (device registration "
+"will be lost ) ?"
+msgstr ""
+"Oletko varma, että haluat palauttaa kaikki asetuksesi (laiterekisteröinti "
+"menetetään ) ?"
 
+#, fuzzy
+#| msgctxt "#30693"
+#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
-msgid "Include full details/RAW retrived data in Debug log"
-msgstr "Include full details/RAW retrived data in Debug log"
+msgid "Include full details/RAW retrieved data in Debug log"
+msgstr ""
+"Sisällytä yksityiskohtaiset tiedot/ladattu data sellaisenaan Debug-lokiin"
 
 msgctxt "#30694"
-msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
-msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgid ""
+"Cryptodome dependency not present on your system, HBO go add-on can't run. "
+"For help consult install instructions/official support thread"
+msgstr ""
+"HBO go -lisäosa ei toimi, koska Cryptodome-riippuvuutta ei ole asennettu. "
+"Lisäohjeita löydät asennusohjeista ja/tai viralliselta tukisivustolta"
 
 msgctxt "#30696"
 msgid "Home Category"
-msgstr ""
+msgstr "Kotikategoria"
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
+msgstr "Ryhmittele Kotilistat erikoiskategorioissa"
+
+msgctxt "#30800"
+msgid "Sync play time with Hbo Go"
+msgstr ""
+
+msgctxt "#30801"
+msgid "Send elapsed time to Hbo go"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Get elapsed time from Hbo go"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Set watched on Hbo Go"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Set un-watched on Hbo Go"
 msgstr ""
